<resources>
    <string name="app_name">Driver</string>
    <string name="welcome">Welcome</string>

    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>

    <string name="upload_your_image">Upload Your Image</string>
    <string name="please_enter_your_name">Your Name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_password_again">"enter again your password "</string>
    <string name="create_new_account">Sign Up</string>
    <string name="switch_to_login">"switch to login "</string>
    <string name="vehicle_registration">register vehicle</string>
    <string name="upload_your_vehicle_image">upload your vehicle image</string>
    <string name="your_vehicle_name">your vehicle name</string>
    <string name="plateNumber">plate number</string>
    <string name="select_your_vehicle_type">your vehicle type</string>
    <string name="motorbike">motorbike</string>
    <string name="car">car</string>
    <string name="register">register</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="welcome_to_lightning_for_driver">"Welcome "</string>
    <string name="log_in_to_existing_account">log in to existing account</string>
</resources>